codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_attach_conflict.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  Unable to complete action
  Task is open elsewhere. Another app server is managing this task, so it can’t be attached
  here.

› 1. Return to command center

  ↑/↓ choose · enter confirm · esc back
