codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_empty.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 72)"
---
  Agents
  0 awaiting input · 0 working · 0 ready

  No agent sessions yet. Dispatch a task below.


















  New task › Describe a task and press enter to dispatch it
  enter dispatch · esc back
