codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_live_activity.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  1\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  0 need input   1 working   0 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  1                                     │ Task details
  › ● Check startup performance  Working              │
                                                      │ Check startup performance
                                                      │ ● Working
                                                      │
                                                      │ Latest activity
                                                      │ Checking cold-start regressions
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Prompt
                                                      │ No prompt available.
                                                      │
                                                      │
                                                      │
  New task
╭──────────────────────────────────────────────────────────────────────────────────────────────╮
┃ › Keep this draft                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
   enter create task    ctrl+j newline    esc tasks
