codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_narrow.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n54).replace(&format!(\"{project}  2\"),\n&normalized_project_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  1 need input   1 working   0 ready
  ──────────────────────────────────────────────────
  /tmp/project  3
  › ! Build the dashboard · current · Needs input
    ● Repair authentication · Working
    ✓ Review yesterday's changes · Finished











  New task
──────────────────────────────────────────────────────
│› First line
│  Second line
──────────────────────────────────────────────────────
   enter create task    esc tasks
