codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_unsent_task.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: rendered
---
  Unable to complete action
  Failed to send task message: turn/start failed: thread not found: 00000000-0000-0000-0000-
  000000000001 (code -32600)

› 1. Return to command center
  2. View unsent task          Your newer draft has been kept in the composer.

  ↑/↓ choose · enter confirm · esc back
